feat: /players/{player} API with fake data + redis
